ges-launch: Be a bit more agressive sanitizing arguments

Otherwise GstStructure might fail parsing some fields
containing brackets

https://bugzilla.gnome.org/show_bug.cgi?id=771434